--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "schema:sync": "ts-node ./node_module/typeorm/cli.js schema:sync"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@loadable/component": "^5.14.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
@@ -30,37 +35,97 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/gravatar": "^1.8.1",
+    "@types/next": "^9.0.0",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "antd": "^4.16.8",
+    "autosize": "^4.0.2",
     "aws-sdk": "^2.958.0",
+    "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
+    "dayjs": "^1.10.4",
     "dotenv": "^8.6.0",
     "express-session": "^1.17.2",
+    "gravatar": "^1.8.1",
     "mysql2": "^2.2.5",
+    "nest-next": "^9.4.0",
+    "next": "^11.0.1",
+    "next-redux-wrapper": "^6.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "^17.0.2",
+    "react-mentions": "^4.1.1",
+    "react-redux": "^7.2.4",
+    "react-refresh": "^0.9.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-toastify": "^7.0.3",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "reflect-metadata": "^0.1.13",
+    "regexify-string": "^1.0.5",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.34"
+    "socket.io-client": "^2.4.0",
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.3.0",
+    "swr": "^0.4.2",
+    "ts-node": "^9.1.1",
+    "typeorm": "^0.2.34",
+    "typescript": "^4.1.5",
+    "typescript-plugin-styled-components": "^2.0.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.16",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/autosize": "^3.0.7",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.24",
+    "@types/loadable__component": "^5.13.3",
     "@types/node": "^16.0.0",
     "@types/passport-local": "^1.0.34",
+    "@types/react-custom-scrollbars": "^4.0.7",
+    "@types/react-mentions": "^4.1.0",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^1.4.35",
     "@types/supertest": "^2.0.11",
+    "@types/webpack": "^4.41.26",
+    "@types/webpack-bundle-analyzer": "^3.9.1",
+    "@types/webpack-dev-server": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.22.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "jest": "27.0.6",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
@@ -69,7 +134,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typeorm-model-generator": "^0.4.5",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.22.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "jest": {
     "moduleFileExtensions": [
