--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "preserve",
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
@@ -10,7 +11,31 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "typeRoots": ["./node_modules/@types"],
-    "incremental": true
-  }
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "incremental": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
